--- a/components/device-status/device-status.html
+++ b/components/device-status/device-status.html
@@ -9,10 +9,26 @@
   <link rel="stylesheet" href="./device-status.css" />
 
   <style>
+    @font-face {
+      font-family: "Noto Sans";
+      src: url("../../assets/fonts/NotoSans-Regular.woff2") format("woff2");
+      font-weight: 400;
+      font-style: normal;
+      font-display: swap;
+    }
+
+    @font-face {
+      font-family: "Noto Sans";
+      src: url("../../assets/fonts/NotoSans-SemiBold.woff2") format("woff2");
+      font-weight: 600;
+      font-style: normal;
+      font-display: swap;
+    }
+
     body {
       margin: 0;
       padding: 1rem;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      font-family: "Noto Sans", Arial, sans-serif;
     }
   </style>
 </head>
